# quant-marketdata-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.private.yml  docker-compose.yml  pyproject.toml
.claude/agents/: README.md  api-designer.md  bug-investigator.md  dependency-manager.md  documentation-specialist.md  git-commit-reviewer.md  performance-optimizer.md  python-architect.md  refactor-specialist.md  release-manager.md  security-reviewer.md  test-engineer.md
.claude/knowledge/: api-contract.md  architecture.md  coding-standards.md  commands.md  data-flow.md  deployment.md  market-data-engine.md  project-skill.md  stack-decisions.md
.claude/memory/: anti-patterns.md  lessons-learned.md  recurring-bugs.md
.claude/playbooks/: bugfix-workflow.md  code-review.md  dependency-upgrade.md  development-workflow.md  feature-development.md  release-checklist.md
.claude/templates/: issue-template.md  pr-template.md  task-template.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: core-architectrual-principles.instructions.md  documentation-standards.instructions.md  file-organization.instructions.md  git-commit.instructions.md  python-dependency-management.instructions.md
.github/prompts/: Git-Commit-Reviewer.prompt.md  Prompt-Engineer.prompt.md  Python-Architect.prompt.md  it.prompt.md
.github/workflows/: ci.yml  docker-publish.yml  security.yml
docs/: README.md  overview.md
docs/api/: admin-ingest.md  health.md  ohlcv-adjusted.md  ohlcv.md  settlements.md  underlying-price.md  universe.md
docs/architecture/: data-model.md  overview.md  security-boundary.md
docs/data/: corporate-actions.md  ohlcv-schema.md  parquet-snapshot.md  universe-membership.md
docs/operations/: bring-up.md  configuration.md  troubleshooting.md
docs/plans/: ROADMAP.md  phase0-adr-repo-bootstrap.md  phase1-quant-infra-db-market-data-schema.md  phase2-service-build-and-gateway-proxy.md  phase3-csm-set-read-from-store.md  phase4-tfex-consume-shared-store.md  phase5-end-to-end-verification-cutover.md  phase6-documentation.md
reports/: verification-csm-sample.json  verification-csm.json
src/: main.py
src/quant_marketdata_engine/: __init__.py  errors.py  logging_config.py  main.py
src/quant_marketdata_engine/api/: __init__.py  deps.py  main.py  routes.py  schemas.py
src/quant_marketdata_engine/cache/: __init__.py  errors.py  ohlcv_cache.py  redis_client.py  single_flight.py
src/quant_marketdata_engine/config/: __init__.py  errors.py  settings.py
src/quant_marketdata_engine/db/: __init__.py  errors.py  models.py  postgres.py  repositories.py
src/quant_marketdata_engine/ingest/: __init__.py  __main__.py  backfill.py  cli.py  errors.py  service.py  tvkit_client.py
src/quant_marketdata_engine/settlement/: __init__.py  errors.py  (+2 more)
tests/: _fakes.py  conftest.py  test_api_main.py  test_api_routes.py  test_api_settlements.py  test_api_underlying_price.py  test_cache_ohlcv_cache.py  test_cache_redis_client.py  test_cache_single_flight.py  test_config.py  test_db_models.py  test_db_postgres.py  test_db_repositories.py  test_ingest_backfill.py  test_ingest_cli.py  test_ingest_service.py  test_ingest_tvkit_client.py  test_main.py  test_settlement_service.py  test_snapshot_exporter.py  test_underlying_price_service.py
tests/verification/: __init__.py  test_verification_utils.py  verification_utils.py  verify_csm_parity.py  verify_tfex_parity.py
(+6 files in other folders)
