[project]
name = "quant-marketdata-engine"
version = "0.1.0"
description = "Market Data Engine — canonical OHLCV store + sole tvkit-cookie owner; gateway-proxied (host :8300)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "lumduan", email = "bad.sonsuk@gmail.com" }]
keywords = ["quant", "market-data", "ohlcv", "timescaledb", "tvkit", "fastapi", "uv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pyarrow>=16",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5",
    "tvkit>=0.11.1",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

# Tests pass in-memory fakes where the prod code is typed against asyncpg.Pool
# (asyncpg is untyped → those ``# type: ignore[arg-type]`` markers are harmless
# but report as unused). Relax only that one check for the test tree.
[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--cov=src", "--cov-report=term-missing", "--cov-fail-under=90"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.uv]
default-groups = ["dev"]
